deploy/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronos-worker
  namespace: chronos
  labels:
    app.kubernetes.io/name: chronos-worker
    app.kubernetes.io/component: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: chronos-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chronos-worker
        app.kubernetes.io/component: worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9091"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: worker
          image: ghcr.io/aymanyouss/chronos-engine:latest
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/chronos-worker"]
          ports:
            - { name: metrics, containerPort: 9091 }
          readinessProbe:
            httpGet: { path: /healthz, port: metrics }
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests: { cpu: "250m", memory: "128Mi" }
            limits: { cpu: "2", memory: "512Mi" }
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
