deploy/k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronos-server
  namespace: chronos
  labels:
    app.kubernetes.io/name: chronos-server
    app.kubernetes.io/component: control-plane
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: chronos-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chronos-server
        app.kubernetes.io/component: control-plane
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: server
          image: ghcr.io/aymanyouss/chronos-engine:latest
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/chronos-server"]
          ports:
            - { name: grpc, containerPort: 7233 }
            - { name: http, containerPort: 8080 }
            - { name: metrics, containerPort: 9090 }
          readinessProbe:
            httpGet: { path: /healthz, port: metrics }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: metrics }
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: { cpu: "250m", memory: "128Mi" }
            limits: { cpu: "1", memory: "512Mi" }
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
---
apiVersion: v1
kind: Service
metadata:
  name: chronos-server
  namespace: chronos
  labels:
    app.kubernetes.io/name: chronos-server
spec:
  selector:
    app.kubernetes.io/name: chronos-server
  ports:
    - { name: grpc, port: 7233, targetPort: grpc }
    - { name: http, port: 8080, targetPort: http }
    - { name: metrics, port: 9090, targetPort: metrics }
